Added some new info and classes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Что такое GitHub и как им пользоваться</h1>
-    <p>83 миллиона пользователей, четыре миллиона организаций и 200 миллионов репозиториев. В Сети много сервисов для размещения исходного кода своих проектов, но говорят чаще всего именно про GitHub. В чём же дело?
-    Конечно, известный владелец сервиса (Microsoft) и привычка играют свою роль, но главная причина — возможности платформы.</p>
-</body>
+  </head>
+  <body>
+    <h1 class="contetnt_header">Что такое GitHub и как им пользоваться</h1>
+    <p class="content_text">
+      83 миллиона пользователей, четыре миллиона организаций и 200 миллионов
+      репозиториев. В Сети много сервисов для размещения исходного кода своих
+      проектов, но говорят чаще всего именно про GitHub. В чём же дело? Конечно,
+      известный владелец сервиса (Microsoft) и привычка играют свою роль, но
+      главная причина — возможности платформы.
+    </p>
+    <ul>
+      <li>Что такое GitHub и чем он отличается от Git</li>
+      <li>Как понять, нужен ли вам GitHub</li>
+      <li>Основные концепции GitHub простыми словами</li>
+      <li>Создание репозитория и загрузка файлов</li>
+      <h1 class="contetnt_header">
+        Что такое GitHub и чем он отличается от Git
+      </h1>
+      <p class="content_text">
+        GitHub — это облачная платформа для хостинга IT-проектов и совместной
+        разработки, под капотом которой находится популярная система контроля
+        версий Git, а также полноценная социальная сеть для разработчиков. Здесь
+        можно найти кучу open-source-проектов на разных языках и поучаствовать в
+        них, разместить своё портфолио с примерами кода, чтобы приложить ссылку
+        к резюме, подглядывать в открытых проектах интересные архитектурные
+        решения, смотреть, как опытные разработчики пишут код, и скачивать
+        огромное количество полезных в разработке и бесплатных инструментов для
+        разработки. Кстати, некоторые умельцы умудряются собирать в GitHub целые
+        библиотеки — книг и статей, а не программистские либы : И да, если вы
+        недовольны какими-то фичами в любимой открытой программе и она выложена
+        на GitHub, вы всегда можете прийти и поругаться в комментариях к проекту
+        : А лучше всего — оформить issue (мы расскажем, что это) и
+        самостоятельно пофиксить проблему на радость всем пользователям. Не
+        забывайте и благодарить авторов классных открытых проектов — донатами и
+        просто тёплыми словами. Им будет очень приятно. Придя практически в
+        любую IT-компанию, вы столкнётесь с тем, что код где-то хранится — и в
+        подавляющем большинстве случаев этим «где-то» будет именно GitHub. У
+        GitHub есть довольно известный конкурент — GitLab, он тоже основан на
+        Git, но это разные платформы разных компаний, хотя их функциональность
+        очень похожа.
+      </p>
+      <h1>Как понять, нужен ли вам GitHub</h1>
+
+    </ul>
+  </body>
 </html>
