--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <li>Что такое GitHub и чем он отличается от Git</li>
       <li>Как понять, нужен ли вам GitHub</li>
       <li>Основные концепции GitHub простыми словами</li>
-      <li>Создание репозитория и загрузка файлов</li>
       <h1 class="contetnt_header">
         Что такое GitHub и чем он отличается от Git
       </h1>
@@ -45,8 +44,52 @@
         Git, но это разные платформы разных компаний, хотя их функциональность
         очень похожа.
       </p>
-      <h1>Как понять, нужен ли вам GitHub</h1>
-
+      <h1 class="contetnt_header">Как понять, нужен ли вам GitHub</h1>
+      <p class="content_text">
+        Безусловно, GitHub нужен не всем. Допустим, вы ещё только учитесь кодить
+        или неспешно делаете небольшой проект для личного пользования — и вас
+        устраивает хранение проекта на локальной машине. Может, сейчас вы просто
+        учите язык, который вам нравится, и на данном этапе не хотите хвататься
+        за всё сразу. В первую очередь GitHub необходим проектам с частыми
+        обновлениями, множеством версий, большим количеством файлов,
+        необходимостью синхронизации разработки и удобного развёртывания. Хотя и
+        тут есть исключения — даже некоторые из ключевых разработчиков ядра
+        Linux до сих пор обмениваются обновлениями кода с помощью электронной
+        почты и архивов с файлами :) И действительно, есть множество других
+        способов хранения исходников: можно создать для них папку в разделе «Мои
+        документы», закидывать их в облако и подписывать версии или даже
+        загружать в «Избранное» в Telegram или «ВКонтакте» (костыльно, да, но
+        вполне реально). А ещё можно накидывать список изменений в заметках в
+        телефоне/на холодильнике текстом в приватном Telegram-канале. Можно
+        деплоить проект с помощью простого скачивания и распаковки ZIP-архива с
+        файлами вашей программы (особенно если цель — просто показать программу
+        другу или девушке, которой вы пришли «помочь с ноутбуком» ^_^). В конце
+        концов, можно сообщать о багах в вашем любимом фреймворке сообществу
+        анонимов в паблике в VK — возмущаться вместе очень весело. Все эти
+        способы по-своему хороши, но для работы в IT нужно привыкать к GitHub:
+        это стандарт индустрии.
+      </p>
+      <h1 class="contetnt_header">
+        Основные концепции GitHub простыми словами
+      </h1>
+      <p class="content_text">
+        Новичков интерфейс GitHub может сбивать с толку: за годы с момента
+        создания площадка обросла множеством инструментов, но главное остаётся
+        неизменным. Почти вся терминология наследуется у Git. Основные термины —
+        репозиторий, ветка, коммит, форк. Выбор некоторых из этих названий может
+        показаться не очень интуитивным (даже если вы владеете английским), но
+        так уж сложилось. Это просто корневая папка с файлами и вложенными
+        директориями вашей программы — и одновременно её страница на GitHub.
+        Загрузить в репозиторий можно всё что угодно, но предполагается, что вы
+        будете хранить в нём файлы с исходным кодом и какие-нибудь
+        дополнительные материалы — допустим, необходимую для GUI или вёрстки
+        графику (картинки, иконки и тому подобное). Репозитории могут быть
+        публичными и приватными, в них можно создавать другие папки и
+        отслеживать изменения версий. Управлять своими репозиториями можно прямо
+        через интерфейс сайта, командную строку, десктопное приложение GitHub
+        или различные средства разработки (IDE), поддерживающие интеграцию с
+        сервисом.
+      </p>
     </ul>
   </body>
 </html>
